Updated the steps to setup tomcat server